maze.lessons.maze.island.IslandMaze.scala.error
Escaper:3: error: Int(0) does not take parameters
  while(getY!=0()){
               ^Escaper:5: error: too many arguments for method getDirection: ()plm.universe.Direction
      getDirection(Direction.North)
                  ^Escaper:8: error: not found: value KeepHandOnSiseWall
      KeepHandOnSiseWall()
      ^